--- a/app/src/main/res/layout/gridlayout.xml
+++ b/app/src/main/res/layout/gridlayout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.GridLayout
+<androidx.gridlayout.widget.GridLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:grid="http://schemas.android.com/apk/res-auto"
 
@@ -33,4 +33,4 @@
         grid:layout_columnWeight="1"
         android:text="Tile4" />
 
-</android.support.v7.widget.GridLayout>
+</androidx.gridlayout.widget.GridLayout>
